[tool.poetry]
name = "wiimote"
version = "0.1.0"
description = "A pure-python Wii Remote interface library."
authors = ["GingerIndustries <75683114+GingerIndustries@users.noreply.github.com >"]

[tool.poetry.dependencies]
python = "^3.9"
pybluez = {git = "https://github.com/pybluez/pybluez", rev = "0.23"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
wiimote-accel-calibrate = 'wiimote.tools.wiimoteaccelcalibrate:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
